# vmod-noreturn

./: CHANGES.rst  README.rst  configure.ac
src/: Makefile.am  noreturn.vcl  vmod_noreturn.c  vmod_noreturn.vcc
src/tests/: test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc  test06.vtc
